tests/ui/layout/invalid-unsized-const-eval.stderr
error[E0277]: the size for values of type `(dyn Sync + 'static)` cannot be known at compilation time
  --> $DIR/invalid-unsized-const-eval.rs:9:11
   |
LL |     data: (dyn Sync, ()),
   |           ^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Sync + 'static)`
   = note: only the last element of a tuple may have a dynamically sized type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
